Fix alignment on unity card

--- a/source/stylesheets/components/card/_body.sass
+++ b/source/stylesheets/components/card/_body.sass
@@ -19,6 +19,7 @@
 
     &--unity
       align-items: flex-start
+      flex-direction: row
 
     +grid-media($breakpoint-medium)
       &--teacher
